[project]
name = "garmin-connect-mcp-server"
version = "0.1.0"
description = "Read-only MCP server for Garmin Connect health, training, and activity data"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "garminconnect>=0.3.6",
]

[project.scripts]
garmin-connect-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "login.py"]
